--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Run Cypress tests
-      run: npx run cy:run:allure
+      run: npx cypress run --env allure=true
     - name: Generate allure-report
       run: npx allure generate allure-results --clean
     - uses: actions/upload-artifact@v3
